MaterialDesign/MaterialDesign.css
/**
    Setup
**/

#app-mount .base-2jDfDU::before {
    content: "Your version of MaterialDesign is outdated. Please download the latest version from source";
    display: var(--version0_9_9, block);
    background-color: var(--brand-experiment-60a);
    color: #fff;
    font-size: 14px;
    line-height: 36px;
    font-weight: 500;
    text-align: center;
    z-index: 101;
}

.content-2hZxGK.thin-31rlnD.scrollerBase-_bVAAt {
    padding-right: 36px !important;
}

[class^="socialLinks-"] + [class^="info-"] > span:first-child::before {
    content: "MaterialDesign " var(--version);
    position: relative;
    top: 0;
    display: block;
}

[class^="socialLinks-"] + [class^="info-"] > span:nth-last-child(1)::after {
    content: var(--skin-name) " Skin by " var(--skin-author);
    position: relative;
    top: 0;
    display: block;
}

.content-2a4AW9 {
    height: 100% !important;
}

.tabBarItem-30Te4-.selected-g-kMVV.themed-2-lozF {
    background: var(--brand-experiment-560) !important;
}

.tabBarItem-30Te4-.themed-2-lozF:hover {
    background: var(--brand-experiment-20a) !important;
}

.tabBarItem-30Te4- {
    margin-right: 20px;
}

.invitetracker-hub-inner,
svg.circleIcon-3489FI {
    color: var(--brand-experiment) !important;
}

.circleIconButton-1VxDrg.selected-2r1Hvo,
.invitetracker-hub:hover {
    background-color: var(--brand-experiment-20a) !important;
}

::placeholder,
body,
button,
input,
select,
textarea {
    font-family: var(--font-primary, "Roboto");
}

code {
    font-family: var(--font-code, "Source Code Pro");
}

.container-2cd8Mz {
    background-color: var(--background-primary) !important;
}

.autocomplete-3NRXG8,
.focused-2FU0YH {
    background-color: var(--12dp) !important;
}

.localizeBadge-24ZXps {
    background-color: transparent;
}

.categoryHeader-OpJ1Ly {
    background-color: transparent !important;
}

.autocomplete-3NRXG8 .selected-2Uns2B {
    background-color: var(--brand-experiment-20a);
}

.wrapper-22rqw6 {
    background-color: var(--04dp);
}

.container-2McqkF {
    background-color: var(--24dp) !important;
}

#app-mount .background-fkKrXt {
    background-color: var(--background-primary) !important;
}

.option-ayUoaq:after {
    background: transparent !important;
}

.option-ayUoaq[aria-selected="true"] {
    background-color: var(--background-accent);
}

.container-4HqGB3.background-3X6Uak {
    background-color: var(--04dp) !important;
}

.containerCard-2kwJKN,
.container-3HMTms {
    background-color: var(--04dp) !important;
    border: 2px solid var(--16dp);
    transition: all 0.2s ease;
}

.containerCard-2kwJKN:hover,
.container-3HMTms:hover {
    background-color: var(--08dp) !important;
}

.keybindShortcut-3zF1P9 span {
    box-shadow: inset 0 -4px 0 var(--08dp);
}

.pageWrapper-2PwDoS {
    background-color: var(--background-secondary) !important;
}

.channelList-24jKfX {
    gap: 10px;
}

.unreadBar-elBRZx {
    border-radius: 4px;
    background-color: var(--brand-experiment);
    opacity: 1;
}

.preview-QJ3OG3 .avatar-2e8lTP {
    left: -53px;
}

.container-JMJRDf {
    margin-block: 8px;
    border-radius: 4px;
}

.unmask-profile {
    left: -35px !important;
    top: 25px !important;
}

.textarea-_59yqs:focus {
    background-color: var(--08dp);
}

.accountProfileCard-lbN7n- {
    background-color: var(--04dp);
}

.accountProfileCard-lbN7n- .background-3d_SjE {
    background-color: var(--08dp);
}

.accountProfileCard-lbN7n- .fieldList-in8WkP {
    background-color: var(--08dp);
}

.bodyInnerWrapper-2bQs1k {
    background-color: transparent !important;
}

/**
    Toasts
**/

.toast-q3Y4wI {
    background: var(--background-floating);
    padding: 14px 16px;
    font-size: 0.875rem;
    font-weight: 400;
    letter-spacing: 0.0178571429em;
    color: hsla(0, 0%, 100%, 0.87);
    border-radius: 4px;
    position: relative;
    overflow: hidden;
}

.container-20TyK0 {
    background: var(--background-floating) !important;
    padding: 14px 16px;
    font-size: 0.875rem;
    font-weight: 400;
    letter-spacing: 0.0178571429em;
    color: hsla(0, 0%, 100%, 0.87);
    border-radius: 4px;
    position: relative;
    overflow: hidden;
}

.container-20TyK0.elevationHigh-28Pty4 button.lookFilled-yCfaCM {
    background: var(--brand-experiment-560) !important;
}

.container-20TyK0 .message-3C6JQ1 {
    font-weight: 400;
}

/**
    Switches.
**/

.container-2nx-BQ {
    border-radius: 50px;
    border: 3px solid transparent;
    box-sizing: content-box;
    transition: all 0.4s ease;
}

.container-2nx-BQ:not(.checked-25WXMf) {
    background-color: var(--switch-unchecked-background) !important;
    border-color: var(--switch-unchecked-color);
}

.container-2nx-BQ:not(.checked-25WXMf) svg > rect {
    fill: var(--switch-unchecked-color);
}

.container-2nx-BQ.checked-25WXMf {
    background-color: var(--switch-checked-background) !important;
}

.container-2nx-BQ.checked-25WXMf .slider-32CRPX {
    left: 15px !important;
}

.slider-32CRPX {
    margin: 4.5px;
    transition: left 0.2s ease;
    width: 20px;
    height: 12px;
    top: -1px;
}

.container-2nx-BQ.checked-25WXMf .slider-32CRPX > svg > path {
    fill: black !important;
}

.container-2nx-BQ {
    width: 40px;
    height: 20px;
}

/**
    Layout 
**/

.title-31SJ6t {
    background: var(--04dp) !important;
}

.role-2TIOKu {
    background: var(--04dp);
    border-radius: 50px;
    padding: 8px 9px;
    transition: all 0.2s ease;
    overflow: hidden;
}

.layout-1qmrhw {
    border-radius: 50px !important;
    transition: all 0.2s ease;
    margin-block: 3px;
}

.wrapper-NhbLHG .content-1gYQeQ {
    border-radius: 50px;
    transition: all 0.2s ease;
    margin-block: 3px;
}

.panels-3wFtMD {
    border-radius: 4px;
    margin: 0 7px 7px 7px;
}

.platform-osx .base-2jDfDU {
    margin-top: 20px;
    border-radius: 4px 0 0 0;
}

/**
    Elevation 
**/

.containerCard-2kwJKN,
.container-3HMTms {
    box-shadow: var(--04dpShadow);
    overflow: visible;
}
/* ... */

